# timefr-telegram-bot

./: .gitignore  Procfile  pyproject.toml  requirements.txt
tests/: test_telebot_test.py
timefr-telegram-bot/: config.py  enums.py  handler.py  main.py  model.py  service.py
